# jbot

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package.json  pyproject.toml  vercel.json
apps/api/src/: config.py  main.py
apps/api/src/agenthub/codeact_agent/: codeact_agent.py
apps/api/src/agenthub/monologue_agent/: agent.py
apps/api/src/api/: deps.py
apps/api/src/api/api_v1/: api.py
apps/api/src/crud/: base.py  crud_user.py
apps/api/src/jbot/: README.md  config.py  main.py
apps/api/src/jbot/bot/: app.py  listen.py
apps/api/src/jbot/github/: github.py
apps/api/src/jbot/github/schemas/: search_code.py
apps/api/src/jbot/linear/: linear.py
apps/api/src/jbot/linear/schema/: issue.py  response.py
apps/api/src/jbot/openai/: assistant.py  constants.py  main.py
apps/api/src/jbot/rag/: constants.py  embedder.py  main.py
apps/api/src/jbot/rag/core/: pipeline_builder.py  utils.py
apps/api/src/jbot/rag/core/index_builder/: repo_index_builder.py
apps/api/src/jbot/rag/core/query_component/: join_nodes_component.py  parent_node_postprocessor.py
apps/api/src/jbot/rag/core/summarizer/: code_summarizer.py
apps/api/src/jbot/routers/: github.py  linear.py  llm.py  vectorstore.py
apps/api/src/jbot/server/: listen.py
apps/api/src/jbot/utils/: pl.py
apps/api/src/jbot/vectorstore/: __init__.py  supabase.py  weaviate.py
apps/api/src/opendevin/llm/: llm.py
apps/docs/documentation/: local-development.mdx
apps/freegpt/: README.md  package.json
