[tool.poetry]
name = "api"
version = "0.1.1"
description = ""
authors = ["jay <siisee111@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
# litellm = "*"
termcolor = "*"
toml = "*"
types-toml = "*"
json-repair = "*"
pygithub = "^2.3.0"
pydantic = "^2.6.4"
gitpython = "^3.1.43"
openai = "^1.21.2"
slack-bolt = "^1.18.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
pytest = "^8.0.1"
pylint-pydantic = "^0.3.2"

# [tool.poetry.group.llama-index.dependencies]
# llama-index = "^0.10.27"
# llama-index-vector-stores-weaviate = "^0.1.4"
# llama-index-vector-stores-supabase = "^0.1.3"
# llama-index-embeddings-openai = "^0.1.7"
# arize-phoenix = "^3.19.4"
# llama-index-callbacks-arize-phoenix = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
